# FastServer

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/core/: config.py  db.py  email.py  logging.py  mongodb.py  redis.py  security.py
app/dependencies/: __init__.py  auth.py  permissions.py
app/middleware/: access_log.py  auth_middleware.py  global_auth.py
app/models/: __init__.py  association.py  permission.py  refresh_token.py  role.py  user.py
app/routers/: auth.py  info_hub.py  permissions.py  roles.py  users.py
app/schemas/: __init__.py  auth.py  base.py  permission.py  role.py  user.py
app/services/: crawler.py
app/utils/: __init__.py  cache.py  token.py
docs/: README.md
docs/auth/: README.md  examples.md  flow.md  overview.md
docs/database/: README.md  initialization.md  migration.md
migrations/: env.py
migrations/versions/: 5392d8862baa_initialize_rbac_permissions_and_roles.py  ab4b745c7ab7_add_email_verified_field.py  b7c392398361_create_initial_tables.py  bad358e26d5e_create_initial_superuser.py
scripts/: __init__.py  create_superuser.py  init_rbac.py
