[project]
name = "fastserver"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "email-validator>=2.3.0",
    "fastapi>=0.121.1",
    "loguru>=0.7.3",
    "motor>=3.7.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.11.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=7.0.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
